--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
   flutter_qr_bar_scanner: ^3.0.2
+  flutter_launcher_icons: ^0.12.0
+  rename: ^2.1.1
  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icn.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
