--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
-
-  file_picker: ^5.2.6
+  gallery_saver: ^2.3.2
   flutter_qr_bar_scanner: ^3.0.2
   flutter_launcher_icons: ^0.12.0
   rename: ^2.1.1
