--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_qr_bar_scanner: ^3.0.2
   flutter_launcher_icons: ^0.12.0
   rename: ^2.1.1
+  qr_code_scanner: ^1.0.1
+  flutter_barcode_scanner: ^2.0.0
  
 
 dev_dependencies:
