--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  qr_flutter: ^4.0.0
-  gallery_saver: ^2.3.2
   flutter_qr_bar_scanner: ^3.0.2
   flutter_launcher_icons: ^0.12.0
   rename: ^2.1.1
   qr_code_scanner: ^1.0.1
   flutter_barcode_scanner: ^2.0.0
+  pretty_qr_code: ^3.0.0
+  qr_image_generator: ^0.2.8
+  qr_image: ^1.0.0
+  image_gallery_saver: ^2.0.3
+  qr_flutter: ^4.1.0
+  permission_handler: ^11.0.1
+  
  
 
 dev_dependencies:
@@ -51,7 +56,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icn.png"
+  image_path: "assets/eicon.jpg"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
